--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,3 +6,14 @@
 	width: 50px;
 	height: 50px;
 }
+.loginBlock {
+	float: right;
+}
+.loginBlock a {
+	color: black;
+	text-decoration: none;
+}
+.loginBlock a:hover {
+	color: white;
+	transition: 0.2s;
+}
