--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -1,3 +1,9 @@
 .selectedPage {
    font-weight: bold;
 }
+.paginationItem span{
+   display: inline-block;
+   padding: 0px 5px;
+   margin: 3px;
+   border: 1px red solid;
+}
