--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,38 @@
+* {
+	box-sizing: border-box;
+	padding: 0px;
+	margin: 0px;
+	font-family: 'IBM Plex Sans', sans-serif;
+}
 .app-wrapper {
+	background-color: #F2F2F2;
+	width: 100%;
+	min-height: 100vh;
+	padding-bottom: 20px;
+}
+.app-content-wrapper {
 	max-width: 1180px;
 	margin: 0 auto;
-	padding: 0px 10px;
+	padding: 0px 15px;
+}
+.app-content-grid {
+	width: 100%;
 	display: grid;
-	grid-template-areas: 
-	"h h"
-	"n c";
-	grid-template-rows: 60px 1fr;
+	grid-template-areas: "n c";
+	grid-template-rows: 1fr;
 	grid-template-columns: 2fr 10fr;
-	grid-gap: 10px;
+	gap: 15px;
 }
 .app-content {
 	grid-area: c;
-	background-color: #3AAACF;
+	background-color: #fff;
+	margin: 10px 0px 0px 0px;
+	padding: 10px;
+	box-shadow: 0px 0px 6px 1px rgba(11, 12, 13, 0.2);
+	border-radius: 5px;
+}
+.app-content-container {
+	max-width: 900px;
+	display: flex;
+	justify-content: center;
 }
