--- a/src/components/Common/FormsControls/FormsControls.module.css
+++ b/src/components/Common/FormsControls/FormsControls.module.css
@@ -12,3 +12,56 @@
 .formAuthError {
    color: red;
 }
+.item {
+   font-size: 1.1rem;
+   font-weight: 600;
+   margin-bottom: 5px;
+   color: #2a323a;
+}
+.item input{
+   font-family: sans-serif;
+   width: 280px;
+   font-size: 1rem;
+   margin: 5px 0px;
+   padding: 5px 10px;
+   outline: none;
+   border: 2px solid #2a323a;
+   border-radius: 3px;
+}
+.item input:focus{
+   border: 2px solid #0004e0cc;
+}
+.item input:hover{
+   border: 2px solid #0004e0cc;
+}
+.itemCheckbox {
+   font-size: 1rem;
+   font-weight: 600;
+   margin-bottom: 5px;
+   color: #2a323a;
+   display: flex;
+   flex-direction: row;
+   align-self: flex-start;
+}
+.itemCheckbox input {
+   cursor: pointer;
+}
+.itemCheckbox span{
+   padding-left: 10px;
+   display: block;
+}
+.button {
+   font-size: 1rem;
+	font-weight: 600;
+	color: #2a323a;
+	text-decoration: none;
+	padding: 1px 10px 4px 10px;
+	border: 2px solid #2a323a;
+	border-radius: 3px;
+   cursor: pointer;
+}
+.button:hover {
+   color: #0004e0cc;
+	border-color:#0004e0cc;
+	transition: 0.2s;
+}
