--- a/src/components/Messages/Message/Message.module.css
+++ b/src/components/Messages/Message/Message.module.css
@@ -1,3 +1,7 @@
 .message {
-   color: white;
+   color: #2a323a;
+   padding: 5px;
+   margin-bottom: 10px;
+   background-color: #ccc5c552;
+   border-radius: 3px;
 }
