--- a/src/components/Messages/Messages.module.css
+++ b/src/components/Messages/Messages.module.css
@@ -1,10 +1,46 @@
 .dialoges {
-   display: grid;
-   grid-template-columns: 3fr 9fr;
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
 }
 .dialogesItems {
+   width: 150px;
    padding: 10px;
+   border-right: 1px solid #0004e0cc;
 }
 .messages {
+   width: 80%;
    padding: 10px;
+   word-wrap: break-word;
+}
+.textarea {
+   font-family: sans-serif;
+   font-size: 1rem;
+   width: 100%;
+   height: 100px;
+   padding: 5px;
+   outline: none;
+   resize: none;
+   border: 1px solid #2a323a;
+}
+.textarea:hover,
+.textarea:focus {
+   border: 1px solid #0004e0cc;
+}
+.button {
+   font-size: 1rem;
+	font-weight: 600;
+	color: #2a323a;
+	text-decoration: none;
+	padding: 1px 10px 4px 10px;
+	border: 2px solid #2a323a;
+	border-radius: 3px;
+}
+.button:hover {
+   color: #0004e0cc;
+	border-color:#0004e0cc;
+	transition: 0.2s;
+	background-color:  #03054b05;
+	cursor: pointer;
 }
