--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,15 +1,24 @@
 .nav {
 	grid-area: n;
-	background-color: #4962D6;
-	padding: 20px;
+	background-color: #fff;
+	padding: 15px;
+	margin: 10px 0px 0px 0px;
+	box-shadow: 0px 0px 6px 1px rgba(11, 12, 13, 0.2);
+	border-radius: 5px;
 }
 .item {
 	padding-bottom: 10px;
+	color: #2a323a;
 }
 .item a{
-	color: white;
+	font-size: 1.1rem;
+	font-weight: 600;
+	color: #2a323a;
 	text-decoration: none;
 }
+.item a:hover {
+	color: #0004e0cc;
+}
 .item a.active {
-	color: gold;
+	color: #0004e0cc;
 }
