--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,6 +1,44 @@
-.postsBlock {
-   padding: 10px;
+.postsContainer {
+   width: 100%;
+   padding: 15px;
+   color: #2a323a;
+}
+.textarea {
+   width: 100%;
+	margin-bottom: 5px;
+}
+.textarea textarea {
+   outline: none;
+	font-size: 1rem;
+	width: 100%;
+	height: 150px;
+	padding: 5px 10px;
+	margin-top: 10px;
+	resize: none;
+	border: 2px solid #2a323a;
+	border-radius: 3px;
+}
+.textarea textarea:hover,
+.textarea textarea:focus {
+	border: 2px solid #0004e0cc
+}
+.button {
+   font-size: 1rem;
+	font-weight: 600;
+	color: #2a323a;
+	text-decoration: none;
+	padding: 1px 10px 4px 10px;
+	border: 2px solid #2a323a;
+	border-radius: 3px;
+}
+.button:hover,
+.button:focus {
+	color: #0004e0cc;
+	border-color:#0004e0cc;
+	transition: 0.2s;
+	background-color:  #03054b05;
+	cursor: pointer;
 }
 .posts {
-   padding: 10px 0px;
+   padding: 15px 0px;
 }
