--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,8 +1,34 @@
-.item {
-	color: rgb(255, 255, 255);
+.itemContainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	color: #2a323a;
+	padding: 10px;
+	margin: 10px 0px;
+	border-radius: 3px;
+	background-color: #ccc5c552;
 }
-.item img {
-	width: 50px;
-	height: 50px;
+.itemAuthor {
+	text-align: center;
+	padding: 5px 10px 5px 5px;
+	border-right: 1px solid #0004e0cc;
+}
+.itemAuthor img {
+	width: 60px;
+	height: 60px;
 	border-radius: 100%;
+}
+.itemTextContainer {
+	display: flex;
+	flex-direction: column;
+	width: 90%;
+	padding: 10px;
+	word-wrap: break-word;
+}
+.itemText {
+	min-height: 70px;
+}
+.itemLikes {
+	align-self: flex-end;
+	color: #0004e0cc;
 }
