--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,4 +1,60 @@
+.usersContainer {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 100%;
+}
+.usersList {
+   max-width: 750px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   flex-wrap: wrap;
+}
+.userItem {
+   display: flex;
+   flex-direction: row;
+   width: 300px;
+   background-color: #ccc5c552;
+   padding: 10px;
+   margin-bottom: 20px;
+   border-radius: 3px;
+}
+.userAvatarBlock {
+   align-self: center;
+}
 .avatar {
    width: 100px;
    height: 100%;
+}
+.button {
+   padding: 10px 0px;
+   text-align: center;
+}
+.button button{
+   outline: none;
+	font-size: 0.8rem;
+	font-weight: 600;
+	color: #2a323a;
+	text-decoration: none;
+	padding: 4px 7px 4px 7px;
+	border: 1px solid #2a323a;
+	border-radius: 3px;
+}
+.button button:hover{
+   cursor: pointer;
+}
+.button button:hover,
+.button button:focus {
+	color: #0004e0cc;
+	border-color:#0004e0cc;
+	transition: 0.2s;
+	background-color:  #03054b05;
+}
+.userDescription {
+   padding: 10px;
+}
+.userDescription span{
+   display: inline-block;
+   margin-bottom: 5px;
 }
