--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
 	display: flex;
 	justify-content: center;
 }
+
+@media (max-width: 767.99px) {
+	.app-content-grid {
+		width: 100%;
+		display: block;
+	}
+}
