--- a/src/components/Common/Paginator/Paginator.module.css
+++ b/src/components/Common/Paginator/Paginator.module.css
@@ -1,6 +1,6 @@
 .paginationItem {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    align-items: center;
    padding: 15px;
 }
@@ -16,10 +16,18 @@
    text-align: center;
    margin: 3px;
 }
-.button {
+.buttonsBlock {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   margin-top: 5px;
+}
+.buttonPrev,
+.buttonNext {
    margin: 0px 10px;
 }
-.button button,
+.buttonPrev button,
+.buttonNext button,
 .paginationItem span{
    font-size: 0.9rem;
 	font-weight: 600;
@@ -29,8 +37,10 @@
 	border: 2px solid #2a323a;
 	border-radius: 3px;
 }
-.button button:hover,
-.button button:focus,
+.buttonPrev button:hover,
+.buttonPrev button:focus,
+.buttonNext button:hover,
+.buttonNext button:focus,
 .paginationItem span:hover {
    outline: none;
 	color: #0004e0cc;
@@ -38,4 +48,24 @@
 	transition: 0.2s;
 	background-color:  #03054b05;
 	cursor: pointer;
+}
+
+@media (max-width: 575.98px) {
+   .paginationList span {
+      width: 40px;
+   }
+   .buttonPrev button,
+   .buttonNext button,
+   .paginationItem span{
+      font-size: 0.7rem;
+      padding: 4px 5px 4px 5px;
+      border: 1px solid #2a323a;
+   }
+}
+
+@media (max-width: 991.98px) {
+   .button button,
+   .paginationItem span{
+      font-size: 0.8rem;
+   }
 }
