--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -45,6 +45,7 @@
 	font-size: 1rem;
 	margin-bottom: 5px;
 	word-wrap: break-word;
+	cursor: default;
 }
 .profileUserDataItem input{
 	outline: none;
